--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/pwa": "^3.0.0-0",
     "@statnett/vue-plotly": "^0.3.2",
     "ant-design-vue": "^1.1.10",
+    "chance": "^1.1.4",
     "cross-env": "^5.2.0",
     "koa": "^2.6.2",
     "mathjs": "^6.5.0",
