--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mathjs": "^6.5.0",
     "nuxt": "^2.0.0",
     "plotly.js": "^1.52.1",
-    "vue-mathjax": "0.0.11"
+    "vue-mathjax": "0.0.11",
+    "vue-numeric-input": "^1.0.6"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
